# AutoML

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT.md  README.md  check_imports.py  check_results.txt  docker-compose.yml  err.txt  fresh_pytest.txt  make_sample_data.py  pipeline_out.txt  pyproject.toml  pytest_fail.txt  pytest_output.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  smoke_out.txt  smoke_test.py  test_fail_strat.txt  test_results.txt  training_after_fix.txt
.claude/: gsd-file-manifest.json
.gemini/: gsd-file-manifest.json
.github/workflows/: ci.yml
.opencode/: gsd-file-manifest.json  opencode.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: config.yaml
configs/data/: default.yaml  large_dataset.yaml  time_series.yaml
configs/deployment/: default.yaml  production.yaml
configs/features/: aggressive.yaml  default.yaml  minimal.yaml
configs/model/: catboost.yaml  ensemble.yaml  lightgbm.yaml  linear.yaml  neural_net.yaml  xgboost.yaml
configs/monitoring/: default.yaml
configs/training/: default.yaml  full.yaml  quick.yaml
data/: sample_train.csv
models/: feature_importances.json
reports/: dataset_stats.json  evaluation_report_20260223_162607.html  evaluation_report_20260223_163039.html  evaluation_report_20260223_164747.html  evaluation_report_20260223_172302.html
reports/verify_p1/: dataset_stats.json  evaluation_report_20260223_171036.html
scripts/: predict.py  train.py
src/: main.py
src/dashboard/: app.py
src/dashboard/components/: charts.py  widgets.py
src/dashboard/pages/: 01_data_overview.py  02_training_results.py  04_predictions.py  05_monitoring.py  __init__.py  page_01_data_overview.py  page_03_model_explain.py  page_04_predictions.py
src/data/: ingestion.py  profiling.py  splitter.py  validation.py  versioning.py
src/deployment/: api.py  batch_predictor.py  middleware.py  schemas.py  serializer.py
src/evaluation/: calibration.py  cross_validator.py  error_analysis.py  explainability.py  fairness.py  metrics.py  report_generator.py
src/features/: datetime_features.py  encoder.py  feature_generator.py  feature_selector.py  feature_store.py  imputer.py  pipeline.py  scaler.py  text_features.py  type_detector.py
src/models/: base_model.py  catboost_model.py  ensemble.py  hyperparameter_tuner.py  lightgbm_model.py  linear_model.py  model_selector.py  neural_net_model.py  trainer.py  xgboost_model.py
src/monitoring/: alerting.py  data_drift.py  model_performance.py  retraining_trigger.py
src/orchestration/: pipeline.py  scheduler.py  steps.py
src/utils/: exceptions.py  logger.py  memory.py  timer.py  validators.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_data.py  test_features.py  test_models.py
