[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-pro"
version = "1.0.0"
description = "Production-grade AutoML Pipeline for Tabular Data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "AutoMLPro Team", email = "automl@example.com" }]
requires-python = ">=3.10"
keywords = ["automl", "machine-learning", "tabular-data", "mlops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Data Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.1.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "catboost>=1.2.0",
    "optuna>=3.5.0",
    "shap>=0.44.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "mlflow>=2.10.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "loguru>=0.7.0",
    "rich>=13.5.0",
    "click>=8.1.0",
    "pydantic>=2.6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "category-encoders>=2.6.0",
    "feature-engine>=1.7.0",
    "pandera>=0.18.0",
    "evidently>=0.4.0",
    "prefect>=2.16.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "bandit>=1.7.8",
]

[project.scripts]
automl-pro = "src.main:cli"

[project.urls]
Homepage = "https://github.com/automl-pro/automl-pro"
Documentation = "https://automl-pro.readthedocs.io"
Repository = "https://github.com/automl-pro/automl-pro"
Issues = "https://github.com/automl-pro/automl-pro/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | dist
  | build
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--cov-fail-under=70",
    "-v",
    "--tb=short",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "build"]
skips = ["B101", "B601"]
