[metadata]
name = automl-pro
version = 1.0.0
description = Production-grade AutoML Pipeline for Tabular Data
long_description = file: README.md
long_description_content_type = text/markdown
author = AutoMLPro Team
author_email = automl@example.com
license = MIT
url = https://github.com/automl-pro/automl-pro
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir = . =.
python_requires = >=3.10, <3.12

[options.entry_points]
console_scripts =
    automl-pro = src.main:cli

[flake8]
max-line-length = 100
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    build,
    dist,
    venv,
    .venv,
    .eggs

[isort]
profile = black
line_length = 100
